--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,32 @@
   position: relative;
   transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
 }
+
+body {
+  margin: 20px;
+  font-family: 'Poppins';
+  color: #333;
+}
+
+nav h1 {
+  margin-right: auto;
+}
+
+.content {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+a {
+  color: rgb(113, 193, 197);
+}
+
+img {
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+nav h1 {
+  margin-right: auto;
+}
