--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,33 @@ img {
   height: 100%;
 }
 
-nav h1 {
-  margin-right: auto;
+.signature {
+  font-style: italic;
+}
+
+.cards {
+  list-style: none;
+    margin: 2rem;
+    text-align: center;
+
+}
+
+.card {
+  margin: 1rem;
+  text-align: center;
+  border: grey solid 1px;
+  background-color: rgb(220, 220, 220);
+  padding: 1rem;
+  display: inline-block;
+  margin: 1rem 2rem;
+}
+
+.art-img {
+  justify-self: center;
+  height: 100%;
+  width: 18rem;
+}
+
+.card img {
+  width: 100%;
 }
