--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,20 @@ img {
   height: 100%;
   width: 18rem;
 }
+
+@media (min-width: 1024px) {
+  .card {
+    width: calc(25% - 2rem);
+  }
+}
+
+@media (min-width: 1200px) {
+  .card {
+    width: calc(20% - 2rem);
+  }
+}
+
+.art-name {
+  font-style: italic;
+  color: black;
+}
