--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,12 @@ nav h1 {
 }
 
 a {
-  color: rgb(113, 193, 197);
+  color: rgb(184, 139, 239);
+}
+
+.img-home {
+  height: 70%;
+  width: 70%;
 }
 
 img {
@@ -62,7 +67,6 @@ img {
   list-style: none;
   margin: 2rem;
   text-align: center;
-
 }
 
 .card {
@@ -73,6 +77,8 @@ img {
   padding: 1rem;
   display: inline-block;
   margin: 1rem 2rem;
+  width: auto;
+  height: auto;
 }
 
 .art-img {
@@ -96,4 +102,93 @@ img {
 .art-name {
   font-style: italic;
   color: black;
+}
+
+.form-style-8 {
+  font-family: 'Open Sans Condensed', arial, sans;
+  width: 500px;
+  padding: 30px;
+  background: #FFFFFF;
+  margin: 50px auto;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+
+}
+.form-style-8 h2{
+  background: #4D4D4D;
+  text-transform: uppercase;
+  font-family: 'Open Sans Condensed', sans-serif;
+  color: #797979;
+  font-size: 18px;
+  font-weight: 100;
+  padding: 20px;
+  margin: -30px -30px 30px -30px;
+}
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="number"],
+.form-style-8 select 
+{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
+}
+
+.form-style-8 input[type="submit"]:hover {
+  background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+  background-color:#34CACA;
+}
+
+.submitted {
+  font-family: 'Open Sans Condensed', arial, sans;
+  font-style: italic;
+}
+
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="text"],
+.form-style-8 input[type="number"],
+.form-style-8 select 
+{
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  outline: none;
+  display: block;
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: transparent;
+  margin-bottom: 10px;
+  font: 16px Arial, Helvetica, sans-serif;
+  height: 45px;
+}
+
+.form-style-8 input[type="submit"]:hover {
+  background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+  background-color:#34CACA;
+}
+
+.submitted {
+  font-family: 'Open Sans Condensed', arial, sans;
+  font-style: italic;
+}
+
+.active {
+  color:rgba(0, 0, 0, 0.22)
 }
