--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,12 @@ img {
   padding: 1rem;
   display: inline-block;
   margin: 1rem 2rem;
-  width: auto;
-  height: auto;
+}
+
+.header-list {
+  text-align: center;
+  margin: 1rem;
+  padding: 1rem;
 }
 
 .art-img {
